2009-03-21  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:   fixed "leaks" in aliases, imports and
	* generic/tclInt.h:     ensembles. Only remaining known leak
	* generic/tclInterp.c:  is in ensemble unknown dispatch (as it
	* generic/tclNamesp.c:  not NR-enabled)
	* tests/tailcall.test:
	
	* tclInt.h: comments

	* tests/tailcall.test: added tests to show that [tailcall] does
	not currently always execute in constant space: interp-alias,
	ns-imports and ensembles "leak" as of this commit.
	
	* tests/nre.test: [foreach] has been NR-enabled for a while, the
	test was marked 'knownBug': unmark it. 
	
	* generic/tclBasic.c:   Fix for (among others) [Bug 2699087]
	* generic/tclCmdAH.c:   Tailcalls now perform properly even from 
	* generic/tclExecute.c: within [eval]ed scripts.
	* generic/tclInt.h:     More tests missing, as well as proper
	exploration and testing of the interaction with "redirectors" like 
	interp-alias (suspect that it does not happen in constant space)
	and pure-eval commands.

	* generic/tclExecute.c: proper fix for [Bug 2415422]. Reenabled 
	* tests/nre.test:       the failing assertion that was disabled on 
	2008-12-18: the assertion is correct, the fault was in the
	management of expansions. 
	
	* generic/tclExecute.c:  fix both test and code for tailcall
	* tests/tailcall.test:   from within a compiled [eval] body.

	* tests/tailcall.test: slightly improved tests

2009-03-20  Don Porter  <dgp@users.sourceforge.net>

	* tests/stringObj.test:         Test stringObj-6.9 checks that
	Tcl_AppendStringsToObj() no longer crashes when operating on a
	pure unicode value.  [Bug 2597185]

	* generic/tclExecute.c (INST_CONCAT1):  Panic when appends overflow
	the max length of a Tcl value.  [Bug 2669109]

2009-03-19  Miguel Sofer  <msofer@users.sf.net>

	* generic/tcl.h:
	* generic/tclInt.h:
	* generic/tclBasic.c:
	* generic/tclExecute.c:
	* generic/tclNamesp.c (Tcl_PopCallFrame): Rewritten tailcall